# p3pr

./: README.md  pyproject.toml
docs/: HowToUse.md  如何使用.md
p3pr7/: __init__.py  core.py
